<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/add_change_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/add_change_value_edit_text"
        android:inputType="numberDecimal"
        android:layout_width="@dimen/add_change_edit_text_width"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_change_unit_spinner"
        />

    <Spinner
        android:id="@+id/add_change_unit_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/add_change_spinner_padding_start"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/add_change_value_edit_text"
        app:layout_constraintStart_toEndOf="@id/add_change_value_edit_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/confirm_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/add_change_value_edit_text"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        />

    <Button
        android:id="@+id/cancel_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/add_change_value_edit_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>