<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/change_item_text"
        android:layout_width="0dp"
        android:gravity="center_vertical"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/change_item_margin_side"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/change_item_delete_button"
        app:layout_constraintTop_toTopOf="@id/change_item_delete_button"
        app:layout_constraintBottom_toBottomOf="@id/change_item_delete_button"/>

    <ImageButton
        android:id="@+id/change_item_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete_red"
        android:background="@android:color/transparent"
        android:text="@string/delete"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/change_item_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/change_item_delete_button" />

</androidx.constraintlayout.widget.ConstraintLayout>