<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/details_history_menu_item"
        android:title="@string/history"
        android:icon="@drawable/ic_bar_chart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/details_edit_menu_item"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/details_delete_menu_item"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
</menu>