...
            android:id="@+id/indicator_view"
            android:background="@drawable/indicator_view_shape"
            android:layout_width="@dimen/indicator_view_size"
            android:layout_height="@dimen/indicator_view_size" />

        <TextView
            android:id="@+id/habit_item_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>
...
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/habit_item_add_change_button"
                android:layout_width="@dimen/add_change_button_size"
                android:layout_height="@dimen/add_change_button_size"
                android:text="@string/add_change"
                android:src="@drawable/ic_upward"
                android:background="@android:color/transparent"/>

...
