...
                android:textSize="@dimen/details_label_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/details_habit_title"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_title_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
...
                android:textSize="@dimen/details_label_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/details_habit_description"
                style="@style/EditTextStyle"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/details_description_label"/>
...
