...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/add_title_edit_text"
                android:layout_width="0dp"
                android:hint="@string/title_hint"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/add_title_label"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/add_desc_edit_text"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:hint="@string/description_hint"
                style="@style/EditTextStyle"
                android:inputType="textMultiLine"
...
