<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ok_menu_item"
        android:title="@string/ok"
        android:icon="@drawable/ic_check"
        app:showAsAction="always"/>

</menu>